Cmbios en la capa de presentacion (vistas)

--- a/ProgramacionAvanzadaTareaN1.Presentacion/Web.config
+++ b/ProgramacionAvanzadaTareaN1.Presentacion/Web.config
@@ -1,12 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  Para obtener más información sobre cómo configurar la aplicación ASP.NET, visite
-  https://go.microsoft.com/fwlink/?LinkId=169433
-  -->
 <configuration>
+  <connectionStrings>
+    <clear />
+    <add name="CnxMaricula" connectionString="Data Source=(local);Initial Catalog=TareaN1_GestionMatricula;Persist Security Info=True;User ID=UserMatricula;Password=4KQJJQsrMa" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7" />
     <httpRuntime targetFramework="4.7" />
+    <globalization uiCulture="es" culture="es-CR" />
+    <pages maintainScrollPositionOnPostBack="true">
+        <controls>
+          <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" />
+        </controls>
+      </pages>
   </system.web>
   <system.codedom>
     <compilers>
