--- a/ProgramacionAvanzadaTareaN1.Presentacion/ProgramacionAvanzadaTareaN1.Presentacion.csproj
+++ b/ProgramacionAvanzadaTareaN1.Presentacion/ProgramacionAvanzadaTareaN1.Presentacion.csproj
@@ -43,6 +43,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AjaxControlToolkit, Version=4.1.50508.0, Culture=neutral, PublicKeyToken=28f01b0e84b6d53e, processorArchitecture=MSIL">
+      <HintPath>..\packages\AjaxControlToolkit.4.1.50508\lib\40\AjaxControlToolkit.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -67,7 +70,40 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\AlertifyJS\alertify.css" />
+    <Content Include="Content\AlertifyJS\alertify.min.css" />
+    <Content Include="Content\AlertifyJS\alertify.rtl.css" />
+    <Content Include="Content\AlertifyJS\alertify.rtl.min.css" />
+    <Content Include="Content\AlertifyJS\themes\bootstrap.css" />
+    <Content Include="Content\AlertifyJS\themes\bootstrap.min.css" />
+    <Content Include="Content\AlertifyJS\themes\bootstrap.rtl.css" />
+    <Content Include="Content\AlertifyJS\themes\bootstrap.rtl.min.css" />
+    <Content Include="Content\AlertifyJS\themes\default.css" />
+    <Content Include="Content\AlertifyJS\themes\default.min.css" />
+    <Content Include="Content\AlertifyJS\themes\default.rtl.css" />
+    <Content Include="Content\AlertifyJS\themes\default.rtl.min.css" />
+    <Content Include="Content\AlertifyJS\themes\semantic.css" />
+    <Content Include="Content\AlertifyJS\themes\semantic.min.css" />
+    <Content Include="Content\AlertifyJS\themes\semantic.rtl.css" />
+    <Content Include="Content\AlertifyJS\themes\semantic.rtl.min.css" />
+    <Content Include="Content\Bootstrap_4.5.0\bootstrap-grid.min.css" />
+    <Content Include="Content\Bootstrap_4.5.0\bootstrap-reboot.min.css" />
+    <Content Include="Content\Bootstrap_4.5.0\bootstrap.css" />
+    <Content Include="Content\Bootstrap_4.5.0\bootstrap.min.css" />
+    <Content Include="Content\Default\Site.css" />
     <Content Include="Global.asax" />
+    <Content Include="HtmlPage1.html" />
+    <Content Include="Scripts\AlertifyJS\alertify.js" />
+    <Content Include="Scripts\AlertifyJS\alertify.min.js" />
+    <Content Include="Scripts\Bootstrap_4.5.0\bootstrap.bundle.min.js" />
+    <Content Include="Scripts\Bootstrap_4.5.0\bootstrap.min.js" />
+    <Content Include="Scripts\Jquery\jquery-3.5.1.min.js" />
+    <Content Include="Scripts\Jquery\jquery.number.min.js" />
+    <Content Include="Views\Default.aspx" />
+    <Content Include="Views\ViewCursos.aspx" />
+    <Content Include="Views\ViewEstudiantes.aspx" />
+    <Content Include="Views\ViewMatricula.aspx" />
+    <Content Include="Views\ViewMatriculados.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -82,10 +118,50 @@
     <Compile Include="Site.Master.designer.cs">
       <DependentUpon>Site.Master</DependentUpon>
     </Compile>
+    <Compile Include="Views\Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ViewCursos.aspx.cs">
+      <DependentUpon>ViewCursos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\ViewCursos.aspx.designer.cs">
+      <DependentUpon>ViewCursos.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ViewEstudiantes.aspx.cs">
+      <DependentUpon>ViewEstudiantes.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\ViewEstudiantes.aspx.designer.cs">
+      <DependentUpon>ViewEstudiantes.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ViewMatricula.aspx.cs">
+      <DependentUpon>ViewMatricula.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\ViewMatricula.aspx.designer.cs">
+      <DependentUpon>ViewMatricula.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ViewMatriculados.aspx.cs">
+      <DependentUpon>ViewMatriculados.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\ViewMatriculados.aspx.designer.cs">
+      <DependentUpon>ViewMatriculados.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Bootstrap_4.5.0\bootstrap-grid.min.css.map" />
+    <Content Include="Content\Bootstrap_4.5.0\bootstrap.css.map" />
+    <Content Include="Content\Bootstrap_4.5.0\bootstrap.min.css.map" />
     <None Include="packages.config" />
     <Content Include="Site.Master" />
+    <Content Include="Scripts\Bootstrap_4.5.0\bootstrap.bundle.min.js.map" />
+    <Content Include="Scripts\Bootstrap_4.5.0\bootstrap.min.js.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -94,9 +170,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
-    <Folder Include="Views\" />
+    <Folder Include="Scripts\Default\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProgramacionAvanzadaTareaN1.Entidades\ProgramacionAvanzadaTareaN1.Entidades.csproj">
