--- a/ProgramacionAvanzadaTareaN1.Entidades/ProgramacionAvanzadaTareaN1.Entidades.csproj
+++ b/ProgramacionAvanzadaTareaN1.Entidades/ProgramacionAvanzadaTareaN1.Entidades.csproj
@@ -48,5 +48,6 @@
     <Compile Include="Matricula.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
